# Firemann

./: README.md
security-datalake/: Esquema_Canonico.JSON  README.md  pyproject.toml  requirements.txt
security-datalake/connectors/ms_graph_fastapi/: pyproject.toml
security-datalake/deploy/compose/: docker-compose.yml
security-datalake/enrich/vt_enricher_fastapi/: pyproject.toml
security-datalake/transform/canonical_mapper/: pyproject.toml
