[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-datalake"
version = "0.1.0"
description = "Fireman Security Data Lake: conectores, enriquecimiento y transformaciones"
requires-python = ">=3.8"

# Unión de dependencias de los 3 subpaquetes (NOTA: ya NO declares 'canonical-mapper' como dependencia externa)
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "kafka-python==2.0.2",
    "httpx==0.27.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1"
]

[tool.setuptools]
# Registramos los 3 paquetes Python que viven en subcarpetas
packages = ["ms_graph_connector", "vt_enricher", "canonical_mapper"]

# Mapeamos cada nombre de paquete a su directorio real dentro del repo
[tool.setuptools.package-dir]
ms_graph_connector = "connectors/ms_graph_fastapi/ms_graph_connector"
vt_enricher       = "enrich/vt_enricher_fastapi/vt_enricher"
canonical_mapper  = "transform/canonical_mapper/canonical_mapper"
