
[project]
# Metadatos del Proyecto 
name = "vt-enricher"
version = "0.1.0"
description = "Servicio para enriquecer eventos con datos de VirusTotal."
requires-python = ">=3.8"

# Dependencias 
# Librerías que este servicio de enriquecimiento necesita.
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "kafka-python==2.0.2",
    "httpx==0.27.0", # Para llamar a la API de VirusTotal.
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1", # Para manejar el API key de VirusTotal.
    "canonical-mapper" # Dependencia del paquete local.
]

[tool.setuptools]
# Configuración de Empaquetado 
# El código fuente de este servicio está en la carpeta 'vt_enricher'.
packages = ["vt_enricher"]