
[project]
# Metadatos del Proyecto 
name = "canonical-mapper"
version = "0.1.0"
description = "Librería compartida para mapear logs al Esquema Canónico de Fireman."
requires-python = ">=3.8"

# Dependencias 
# Este paquete es bastante simple. Puede que solo necesite Pydantic si usas
# los modelos canónicos para la transformación.
dependencies = [
    "pydantic==2.7.1"
]

[tool.setuptools]
# Configuración de Empaquetado 
# El código de esta librería está en la carpeta 'canonical_mapper'.
packages = ["canonical_mapper"]